--- a/style.css
+++ b/style.css
@@ -7,15 +7,20 @@ body {
 .navbar a{
   padding-left: 40px;
   padding-right: 40px;
+  padding-bottom: 30px;
   color: rgb(196, 17, 231);
   text-decoration: none;
   font-size: 17px;
   
 
- 
-
-
 }
+#navigation{
+  border-bottom-style: double;
+  padding-top: 10px;
+}
+
+
+
     
 
 
@@ -32,8 +37,9 @@ ul li{
   height: 70vh;
 }
 .footerRow {
-  background-color: blue;
+  background-color: rgb(85, 85, 116);
   height: 10vh;
+  
 }
 
 .sideBar01 {
@@ -46,4 +52,123 @@ ul li{
 .sidebarItem {
   margin: 2%;
   background-color: lightgoldenrodyellow;
+}
+
+.main{
+  height: 70vh;
+  width: auto;
+  align-items: 
+}
+
+.image{
+  display:inline-block;
+  vertical-align: middle;
+  max-height: 100%;
+  max-width: 100%;
+}
+ 
+
+.header{
+
+  
+  height: 40vh;
+  background-image: url("gaming.jpg");
+ 
+
+
+  
+}
+
+img{
+  display: inline-block;
+  vertical-align: middle;
+  max-height: 100%;
+  max-width: 100%;
+}
+
+
+
+div.picturegallery{
+  margin: 5px;
+  border: 1px solid black;
+  float: left;
+  width: auto;
+
+}
+
+div.gallery:hover{
+  border: 1px solid #777;
+
+}
+
+div.gallery: img{
+  width:100%;
+  height:auto;
+
+}
+
+div.description{
+  padding: 15px;
+  text-align: center;
+}
+
+.contact{
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-top: 20px;
+
+
+}
+
+input[type=text], select{
+  width: auto;
+  padding: 10px 10px;
+  margin:1px 0;
+  display: inline-block;
+  border: 1px solid pink;
+  box-sizing:border-box;
+  
+}
+
+input[type=email], select{
+  width: auto;
+  padding: 10px 10px;
+  margin:1px 0;
+  display: inline-block;
+  border: 1px solid pink;
+  box-sizing:border-box;
+  
+}
+
+div.form{
+  display: block;
+  text-align: center;
+}
+form{
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+}
+
+.footer{
+  background-color:purple;
+  height: 10vh;
+}
+
+title{
+  text-align: center;
+
+}
+
+h1{
+  text-align: center;
+  padding-bottom: 100px;
+  padding-top: 100px;
+
+}
+
+h2{
+  text-align: center;
+  padding-top: 70px;
 }
