--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: beige;
+  background-color: rgb(255, 255, 255);
   width: 100vw;
   
 }
@@ -8,7 +8,7 @@ body {
   padding-left: 40px;
   padding-right: 40px;
   padding-bottom: 30px;
-  color: rgb(196, 17, 231);
+  color: rgb(0, 0, 0);
   text-decoration: none;
   font-size: 17px;
   
@@ -152,7 +152,7 @@ form{
 }
 
 .footer{
-  background-color:purple;
+  background-color:rgb(224, 169, 224);
   height: 10vh;
 }
 
